--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
     </section>
 
     <div class="" style="background: blue; width: 100%; height: 100vh;">
+    <h1>Contact Section</h1>  
     </div>
 
 
