--- a/index.html
+++ b/index.html
@@ -202,9 +202,43 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-12 col-md-7">
-            <img src="images/glass.jpg" class="img-fluid product-image" alt="">
-          </div>
+
+            <div class="col-sm-12 col-md-7">
+              <div class="feat-img-block">
+                <div class="row">
+                	<div class="col-sm-6 no-padding">
+                    <div class="feat-img">
+          					  <a href="images/cuisine.jpg" target="_blank">
+          						  <img src="images/cuisine.jpg" alt="">
+          					  </a>
+          				  </div>
+          			  </div>
+                	<div class="col-sm-6 no-padding">
+                    <div class="feat-img">
+          					  <a href="images/coffee.jpg" target="_blank">
+          						  <img src="images/coffee.jpg" alt="">
+          					  </a>
+          				  </div>
+          			  </div>
+                	<div class="col-sm-6 no-padding">
+                    <div class="feat-img">
+          					  <a href="images/bowl.jpg" target="_blank">
+          						  <img src="images/bowl.jpg" alt="">
+          					  </a>
+          				  </div>
+          			  </div>
+                	<div class="col-sm-6 no-padding">
+                    <div class="feat-img">
+          					  <a href="images/beverage.jpg" target="_blank">
+          						  <img src="images/beverage.jpg" alt="">
+          					  </a>
+          				  </div>
+          			  </div>
+                </div>
+              </div>
+            </div>
+
+
           <div class="col-sm-12 col-md-5">
             <div class="product-list">
               <ul>
@@ -305,10 +339,22 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="" style="background: blue; width: 100%; height: 100vh;">
+        <section class="contact-area" id="contact">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12 text-center">
+                <div class="feature-title">
+                  <div class="sub-heading">
+                    <h2>Contact Me</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+      </div>
+    </section>
 
-    <div class="" style="background: blue; width: 100%; height: 100vh;">
-    <h1>Contact Section</h1>  
-    </div>
 
 
 
