add contact page, clean up code

--- a/v2/index.html
+++ b/v2/index.html
@@ -19,17 +19,17 @@
       <div class="container-fluid">
         <div class="row">
           <nav id="mainNavbar" class="navbar navbar-expand-lg  fixed-top">
-            <a class="navbar-brand logo" href="#"><img src="assets/images/CorbinLogo.png" alt=""></a>
+            <a class="navbar-brand logo" href="index.html"><img src="assets/images/CorbinLogo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span id='collapseIcon' class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item"> <a  id="nav-link" class="nav-link" href="index.html">Home</a> </li>
-                <li class="nav-item"> <a  id="nav-link" class="nav-link" href="#">Gallery</a> </li>
+                <li class="nav-item"> <a  id="nav-link" class="nav-link" href="gallery.html">Gallery</a> </li>
                 <li class="nav-item"> <a  id="nav-link" class="nav-link" href="services.html">Services</a> </li>
                 <li class="nav-item"> <a  id="nav-link" class="nav-link" href="#">Product</a> </li>
-                <li class="nav-item"> <a  id="nav-link" class="nav-link" href="#">Contact</a> </li>
+                <li class="nav-item"> <a  id="nav-link" class="nav-link" href="contact.html">Contact</a> </li>
               </ul>
             </div>
           </nav>
@@ -55,6 +55,8 @@
       <i class="fas fa-fire"></i>
       <i class="fas fa-wind"></i>
       <i class="fas fa-bong"></i>
+      <i class="fas fa-water"></i>
+      <i class="fas fa-mountain"></i>
       <br>
       <p>“This is why alchemy exists," the boy said. "So that everyone will search for his treasure, <br>
         find it, and then want to be better than he was in his former life."
@@ -183,7 +185,7 @@
             <div class="col-sm-12 col-md-7">
               <div class="feat-img-block">
                 <div class="row">
-                	<div class="col-sm-6 no-padding">
+                	<div class="col-sm-6 test no-padding">
                     <div class="feat-img">
           					  <a href="assets/images/cuisine.jpg" target="_blank">
           						  <img src="assets/images/cuisine.jpg" alt="">
@@ -316,47 +318,7 @@
 
 
 
-    <!-- Contact Me Section -->
-    <!-- <section>
-      <div class="" style="background: blue; width: 100%;"> -->
-        <section class="contact-area" id="contact">
-          <div class="container padding">
-            <div class="row">
-              <div class="col-sm-12 text-center">
-                <div class="feature-title">
-                  <div class="sub-heading">
-                    <h2>Contact Me</h2>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="contact-section">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="business-card">
-                    <img src="assets/images/corbin_logo.jpg">
-                  </div>
-                </div>
-                <div class="col-md-6 m-s-4 ">
-                  <div class="wrapper">
-                    <div class="contact-form">
-                      <div class="input-fields">
-                        <input type="text" class="input" placeholder="Name" />
-                        <input type="text" class="input" placeholder="Email Address" />
-                        <input type="text" class="input" placeholder="Phone" />
-                        <input type="text" class="input" placeholder="Subject" />
-                      </div>
-                      <div class="msg">
-                        <textarea placeholder="Message"></textarea>
-                        <div class="contact-btn">Send</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-      </div>
-    </section>
+
 
     <div id="polyscape-4" class="polyscape-background">
         <div class="square-rotated"></div>
@@ -371,16 +333,16 @@
     <footer id="myFooter">
         <div class="container">
             <ul>
-                <li><a href="#">5th Element Glass</a></li>
-                <li><a href="#">Contact us</a></li>
+              <li><a href="index.html">5th Element Glass</a></li>
+              <li><a href="contact.html">Contact us</a></li>
                 <li><a href="#">Reviews</a></li>
                 <li><a href="#">Terms of service</a></li>
             </ul>
         <p class="footer-copyright">© 2019 Copyright Text</p>
         </div>
         <div class="footer-social">
-            <a href="#" class="social-icons"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="social-icons"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/corbin.trinchera.1" class="social-icons"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/5thelementglass/" class="social-icons"><i class="fab fa-instagram"></i></a>
             <a href="#" class="social-icons"><i class="fab fa-snapchat-ghost"></i></a>
         </div>
     </footer>
