--- a/v2/services.html
+++ b/v2/services.html
@@ -18,17 +18,17 @@
       <div class="container-fluid">
         <div class="row">
           <nav id="mainNavbar" class="navbar navbar-expand-md  fixed-top">
-            <a class="navbar-brand logo" href="#"><img src="assets/images/CorbinLogo.png" alt=""></a>
+            <a class="navbar-brand logo" href="index.html"><img src="assets/images/CorbinLogo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span id='collapseIcon' class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item"> <a  id="nav-link" class="nav-link" href="index.html">Home</a> </li>
-                <li class="nav-item"> <a  id="nav-link" class="nav-link" href="#">Gallery</a> </li>
+                <li class="nav-item"> <a  id="nav-link" class="nav-link" href="gallery.html">Gallery</a> </li>
                 <li class="nav-item"> <a  id="nav-link" class="nav-link" href="services.html">Services</a> </li>
                 <li class="nav-item"> <a  id="nav-link" class="nav-link" href="#">Product</a> </li>
-                <li class="nav-item"> <a  id="nav-link" class="nav-link" href="#">Contact</a> </li>
+                <li class="nav-item"> <a  id="nav-link" class="nav-link" href="contact.html">Contact</a> </li>
               </ul>
             </div>
           </nav>
@@ -126,16 +126,16 @@
   <footer id="myFooter">
       <div class="container">
           <ul>
-              <li><a href="#">5th Element Glass</a></li>
-              <li><a href="#">Contact us</a></li>
+            <li><a href="index.html">5th Element Glass</a></li>
+            <li><a href="contact.html">Contact us</a></li>
               <li><a href="#">Reviews</a></li>
               <li><a href="#">Terms of service</a></li>
           </ul>
       <p class="footer-copyright">© 2019 Copyright Text</p>
       </div>
       <div class="footer-social">
-          <a href="#" class="social-icons"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="social-icons"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/corbin.trinchera.1" class="social-icons"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/5thelementglass/" class="social-icons"><i class="fab fa-instagram"></i></a>
           <a href="#" class="social-icons"><i class="fab fa-snapchat-ghost"></i></a>
       </div>
   </footer>
